# luapack

./: .gitignore  .goreleaser.yaml  .luarc.json  Cargo.toml  Clippy.toml  README.md  mise.toml
.github/workflows/: pr.yml  release.yml
doc/: bundler.md
examples/simple/: .luarc.json  luapack.toml
examples/simple/lua/: main.lua
examples/simple/lua/core/: greet.lua  greet_setup.lua
scripts/: pre-commit.sh
src/: bundle.rs  config.rs  graph.rs  lib.rs  normalize.rs  options.rs  replace.rs  resolve.rs  scan.rs  transform.rs  vendor.rs
tests/: basic.rs  integration_entry_module.rs  integration_init_search.rs  integration_preludes_order.rs  integration_replace_exact.rs  integration_replace_prefix.rs  integration_vendor_only.rs  unit_replace.rs  unit_resolver.rs  unit_transform.rs  unit_vendor.rs
tests/common/: mod.rs
tests/fixtures/entry_module/lua/: main.lua
tests/fixtures/init_search/lua/: main.lua
tests/fixtures/preludes_order/: prelude1.lua  prelude2.lua
tests/fixtures/replace/: prelude.lua
tests/fixtures/replace/lua/: main.lua
tests/fixtures/replace_exact/lua/: main.lua
tests/fixtures/replace_path/lua/: main.lua
tests/fixtures/replace_prefix/lua/: main.lua
tests/fixtures/vendor_only/lua/: main.lua
tests/snapshots/: integration_entry_module__bundle_returns_specified_entry_module.snap  integration_init_search__bundle_includes_init_module.snap  integration_replace_exact__bundle_rewrites_exact_in_root.snap  integration_replace_prefix__bundle_rewrites_prefix_in_root.snap  integration_vendor_only__bundle_vendor_only_includes_vendor_module.snap
(+3 files in other folders)
